<resources xmlns:tools="http://schemas.android.com/tools">
    <string-array name="empty_array" tools:ignore="UnusedResources"/>
    <string name="empty"></string>
    <string name="log_file_template" translatable="false">sap_rc_log_%s.txt</string>
    <string name="crash_file_name" translatable="false">sap_rc_crash_%s.txt</string>
    <string name="intent_update_ui" translatable="false">com.sap.sailing.racecommittee.intent.update-ui</string>
    <string name="intent_update_ui_data" translatable="false">com.sap.sailing.racecommittee.intent.update-ui.data</string>
    <string name="intent_uncheck_all" translatable="false">com.sap.sailing.racecommittee.intent.uncheck-all</string>
    <string name="url_google_geocoder">http://maps.googleapis.com/maps/api/geocode/json?address=</string>
    <string name="urlpart_google_geocoder_sensor">\?sensor=true</string>
    <string name="running_on_course">(on course %s)</string>
    <string name="course_design_number_waypoints">Course has %d waypoints</string>
    <string name="service_info" translatable="false">SAP Sailing Race Manager Service</string>
    <string name="service_text_no_races">Waiting for races to monitor&#8230;</string>
    <string name="service_text_num_races">Currently monitoring %d races.</string>
    <string name="app_name" translatable="false">SAP Sailing Race Manager</string>
    <string name="set_time">Start</string>
    <string name="reset_time">Restart</string>
    <string name="choose">Choose</string>
    <string name="current_time">Current time</string>
    <string name="race_finished_template">%s is finished</string>
    <string name="race_first_boat_finished">First boat finished at:</string>
    <string name="race_first_finisher">First finisher at %1$s</string>
    <string name="race_first_finisher_and_time_limit">First finisher at %1$s, Race finishing limit is at %2$s</string>
    <string name="race_time_limit">Race finishing limit is at %s</string>
    <string name="choose_startmode">Choose the start mode for this race</string>
    <string name="choose_abort_mode">Select the flags you want to display</string>
    <string name="choose_abort_flag_mode">Select the aborting flag mode</string>
    <string name="flags_up">UP</string>
    <string name="flags_down">DOWN</string>
    <string name="ap_or_november">Choose the aborting flag</string>
    <string name="choose_start_mode_flag">Choose a start mode flag</string>
    <string name="abort_starting_phase">Abort the starting phase</string>
    <string name="abort_running_race">Abort the race</string>
    <string name="choose_xray_flag_up">Display individual recall</string>
    <string name="choose_xray_flag_down">Remove individual recall</string>
    <string name="choose_first_substitute_flag">General Recall</string>
    <string name="confirm_general_recall">Execute General Recall?</string>
    <string name="confirm">Confirm</string>
    <string name="abort">Cancel</string>
    <string name="choose_blue_flag">Begin finish phase</string>
    <string name="flag_ap">AP</string>
    <string name="flag_november">November</string>
    <string name="flag_jury">Jury</string>
    <string name="label_login_events">Regatta</string>
    <string name="label_login_course_area">Area</string>
    <string name="label_login_position">Position</string>
    <string name="login_type_superuser">Login as super user</string>
    <string name="login_type_officer_on_vessel">Login as race officer on a vessel.</string>
    <string name="login_type_shore_control">Login as shore control.</string>
    <string name="login_type_viewer">Login as view-only (demo mode) user.</string>
    <string name="racelist_unscheduled">Not yet scheduled</string>
    <string name="racelist_prescheduled">Pre-scheduled for %s</string>
    <string name="racelist_scheduled">Scheduled for %s</string>
    <string name="racelist_startphase">Start at %s in progress</string>
    <string name="racelist_running">Running since %s</string>
    <string name="racelist_finishing">Finishing</string>
    <string name="racelist_finished">Finished</string>
    <string name="racelist_unknown">Unknown</string>
    <string name="currentlyLoading">Currently loading &#8230;</string>
    <string name="racingview_header">Races on course area \'%s\'</string>
    <string name="running_on_unknown">(click to set course)</string>
    <string name="updateIndicator">Update indicator</string>
    <string name="reset_race">Reset race</string>
    <string name="postpone">Postpone</string>
    <string name="race_running_since_template">%1$s runs since %2$s</string>
    <string name="race_reset_confirmation_header">You are about to reset the race</string>
    <string name="race_reset_confirmation_warning">Resetting the race removes all its saved data permanently. All information regarding the race state has to be entered again. Only the entered course information are kept. We strongly recommend to not reset the race.</string>
    <string name="race_reset_confirmation_title">Reset this Race?</string>
    <string name="race_reset_reset_button">Reset anyway</string>
    <string name="race_finished_start_time">Race started at:</string>
    <string name="race_finished_end_time">Race finished at:</string>
    <string name="race_startphase_countdown_mode_remove">%1$s until %2$s is removed</string>
    <string name="race_startphase_countdown_mode_display">%1$s until %2$s is displayed</string>
    <string name="race_startphase_countdown_start">%1$s until %2$s starts&quot;</string>
    <string name="set_pathfinder">Pathfinder</string>
    <string name="set_pathfinder_title">Choose the pathfinder</string>
    <string name="protest_dialog_title">Protest start time</string>
    <string name="finished_dialog_title">Set the time when the race finished</string>
    <string name="protest_start_time">Protest start time: %s</string>
    <string name="protest_duration">Protest duration: %d min</string>
    <string name="protest_end_time">Protest end time: %s</string>
    <string name="protest_duration_dialog_title">Duration in Minutes</string>
    <string name="no_pathfinder_selected">No Pathfinder selected</string>
    <string name="set_line_opening_time">Gate Launch</string>
    <string name="no_line_opening_time_selected">No time selected</string>
    <string name="set_gate_line_opening_time_title">Set the Gate Launch time</string>
    <string name="choose_line_open_min">min</string>
    <string name="previous_course">Previous course</string>
    <string name="make_new_course">Create a course</string>
    <string name="course_design_assets">Course design assets</string>
    <string name="course_design_dialog_title">Set up a course design</string>
    <string name="pick_a_rounding_direction">Pick a rounding direction</string>
    <string name="select_penalty_reason">Select penalty reason</string>
    <string name="passing_instruction_none">None</string>
    <string name="passing_instruction_port">Port</string>
    <string name="passing_instruction_starboard">Starboard</string>
    <string name="passing_instruction_single_unknown">Single, Unknown</string>
    <string name="passing_instruction_gate">Gate</string>
    <string name="passing_instruction_line">Line</string>
    <string name="passing_instruction_offset">Offset</string>
    <string name="passing_instruction_fixed_bearing">Fixed Bearing</string>
    <string name="publish">Publish</string>
    <string name="unpublish">Unpublish</string>
    <string name="take_previous">Use previous course</string>
    <string name="take_previous_short">Use this</string>
    <string name="markImage">Mark image</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tracking_list_01">Competitor List</string>
    <string name="tracking_list_02">Result List</string>
    <string name="availableFinishingCompetitors">Competitors</string>
    <string name="choose_blue_flag_finishing">Finish race</string>
    <string name="drag_handle_description">Drag handle</string>
    <string name="options_menu_settings">Settings</string>
    <string name="results_capturing_title">Race Results</string>
    <string name="results_capturing_view_subject">Mail subject</string>
    <string name="results_capturing_view_body">Mail body</string>
    <string name="results_capturing_view_send">Send results</string>
    <string name="results_capturing_view_add_photo">Add photo</string>
    <string name="results_capturing_view_list_header">Attached photos</string>
    <string name="results_capturing_view_list_empty">No photos yet</string>
    <string name="results_mail_subject">[Race Committee - %1$s] %2$s</string>
    <string name="results_mail_body">Results for race \'%s\' are attached.\n\n</string>
    <string name="results_mail_body_boat_class">Boat Class: %s\n</string>
    <string name="results_mail_body_race_group">Race Group: %s\n</string>
    <string name="results_mail_body_start">Start Time: %s\n</string>
    <string name="results_mail_body_finish">Finish Time: %s\n</string>
    <string name="wind_direction_degrees">Wind direction from (degrees)</string>
    <string name="enter_wind_direction">Direction (from)</string>
    <string name="enter_wind_speed">Speed (kts)</string>
    <string name="enter_wind_gps">Wind Measuring Position</string>
    <string name="check_all_data">3. Check all data</string>
    <string name="in_degrees">in degrees</string>
    <string name="in_knots">in knots</string>
    <string name="wind_speed_direction_not_a_valid_number">The wind speed or direction is not a valid number. Please correct the value.</string>
    <string name="wind_location_or_fields_not_valid">The entered location, wind speed, or direction is empty. Please correct the values.</string>
    <string name="waiting_for_gps">Waiting for GPS Signal&#8230;</string>
    <string name="manual_entry">Manual Position Entry</string>
    <string name="found_gps_position">GPS-Based Position</string>
    <string name="set_position_manually">Add Position Manually</string>
    <string name="searchPosition">Location search &#8230;</string>
    <string name="no_location_found">Could not find a location based on your query.</string>
    <string name="store_position">Use this position</string>
    <string name="store_wind">Store wind</string>
    <string name="settings_activity_title">Settings</string>
    <string name="settings_category_general">Other</string>
    <string name="settings_general_manageareas_header">Managed Course Areas</string>
    <string name="settings_general_language_header">Select Language</string>
    <string name="settings_category_regatta_defaults">Regatta Configuration (default)</string>
    <string name="settings_category_regattas">Regatta Configuration (specific)</string>
    <string name="settings_category_course_designer">Course Designer Configuration</string>
    <string name="race_start_in_5_minutes">5 Minutes</string>
    <string name="race_start_in_4_minutes">4 Minutes</string>
    <string name="race_start_in_1_minute">1 Minute</string>
    <string name="race_reset_course">Reset Course</string>
    <string name="toggle_group_race_mode">Group Race?</string>
    <string name="toggle_group_race_mode_off">No Group Racing</string>
    <string name="toggle_group_race_mode_on">Group Racing</string>
    <string name="start_procedure">Procedure</string>
    <string name="start_mode">Mode</string>
    <string name="course">Course</string>
    <string name="wind">Wind</string>
    <string name="gate_start_pathfinder">Pathfinder</string>
    <string name="gate_start_timing">Timing</string>
    <string name="onboarding_scan">Scan QR Code</string>
    <string name="onboarding_input">Manual Input</string>
    <string name="race_group">Group Racing</string>
    <string name="get_started">Getting Started</string>
    <string name="race_factor">Factor</string>
</resources>