<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="com.sap.sailing.racecommittee.app.ui.fragments.preference.GeneralPreferenceFragment"
        android:title="@string/settings_category_general" />
    <header
        android:fragment="com.sap.sailing.racecommittee.app.ui.fragments.preference.RegattaPreferenceFragment"
        android:title="@string/settings_category_regatta_defaults"/>
	<header
        android:fragment="com.sap.sailing.racecommittee.app.ui.fragments.preference.RegattaSpecificPreferenceFragment"
        android:title="@string/settings_category_regattas"/>
	<header
        android:fragment="com.sap.sailing.racecommittee.app.ui.fragments.preference.CourseDesignerPreferenceFragment"
        android:title="@string/settings_category_course_designer" />
</preference-headers>
