<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/race_startphase_base_start_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Welter.ExtraBigTitleLabel" />

    <TextView
        android:id="@+id/race_startphase_base_next_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Welter.BigTitleLabel" />

    <ImageView
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="2dp"
        android:scaleType="fitXY"
        android:src="@android:drawable/divider_horizontal_textfield" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <include
            layout="@layout/race_flag_space"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.618" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#DADADA" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.99"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ViewStub
                android:id="@+id/race_startphase_base_actions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/race_startphase_base_abort_button"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:contentDescription="@string/flag_ap"
                android:scaleType="fitCenter"
                android:src="@drawable/ap_flag" />

            <TextView
                android:id="@+id/abortingFlagButtonLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="1dp"
                android:text="@string/abort_starting_phase"
                android:textAppearance="@style/TextAppearance.Welter.TitleLabel" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/raceStartIn4Minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/raceStartIn1Minute"
                    android:text="@string/race_start_in_4_minutes"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/raceStartIn5Minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/raceStartIn1Minute"
                    android:text="@string/race_start_in_5_minutes"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/raceStartIn1Minute"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:text="@string/race_start_in_1_minute" />

            </RelativeLayout>

            <Button
                android:id="@+id/raceResetCourse"
                android:layout_width="197dp"
                android:layout_height="50dp"
                android:text="@string/race_reset_course" />

            <Button
                android:id="@+id/race_startphase_base_reset_time_button"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/reset_time" />

            <ToggleButton
                android:id="@+id/toggle_group_race_mode"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:checked="false"
                android:text="@string/toggle_group_race_mode"
                android:textOff="@string/toggle_group_race_mode_off"
                android:textOn="@string/toggle_group_race_mode_on" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>