<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/race_startphase_gate_actions_pathfinder_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="2dp"
        android:text="@string/no_pathfinder_selected"
        android:textAppearance="@style/TextAppearance.Welter.TitleLabel" />

    <Button
        android:id="@+id/race_startphase_gate_actions_pathfinder_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/set_pathfinder" />

    <TextView
        android:id="@+id/race_startphase_gate_actions_opening_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="2dp"
        android:text="@string/no_line_opening_time_selected"
        android:textAppearance="@style/TextAppearance.Welter.TitleLabel" />

    <Button
        android:id="@+id/race_startphase_gate_actions_opening_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/set_line_opening_time" />
</LinearLayout>
