<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonGeneral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="com.sap.sailing.racecommittee.app.ui.fragments.preference.GeneralPreferenceFragment"
        android:text="@string/settings_category_general" />

    <Button
        android:id="@+id/buttonRegattaDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonGeneral"
        android:tag="com.sap.sailing.racecommittee.app.ui.fragments.preference.RegattaPreferenceFragment"
        android:text="@string/settings_category_regatta_defaults" />

    <Button
        android:id="@+id/buttonRegatta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonRegattaDefault"
        android:tag="com.sap.sailing.racecommittee.app.ui.fragments.preference.RegattaSpecificPreferenceFragment"
        android:text="@string/settings_category_regattas" />

    <Button
        android:id="@+id/buttonCourseDesigner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonRegatta"
        android:tag="com.sap.sailing.racecommittee.app.ui.fragments.preference.CourseDesignerPreferenceFragment"
        android:text="@string/settings_category_course_designer" />

</RelativeLayout>