<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.sap.sailing.racecommittee.app.ui.views.PanelButton
            android:id="@+id/button_procedure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:buttonCaption="@string/start_procedure"
            app:buttonType="typeValue"
            app:linePosition="right"/>

        <com.sap.sailing.racecommittee.app.ui.views.PanelButton
            android:id="@+id/button_mode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:buttonCaption="@string/start_mode"
            app:buttonType="typeImage"/>

        <com.sap.sailing.racecommittee.app.ui.views.PanelButton
            android:id="@+id/button_pathfinder"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:buttonCaption="@string/gate_start_pathfinder"
            app:buttonType="typeValue"
            app:linePosition="right"/>

        <com.sap.sailing.racecommittee.app.ui.views.PanelButton
            android:id="@+id/button_timing"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:buttonCaption="@string/gate_start_timing"
            app:buttonType="typeValue"/>

        <com.sap.sailing.racecommittee.app.ui.views.PanelButton
            android:id="@+id/button_race_group"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:buttonCaption="@string/race_group"
            app:buttonSwitch=""
            app:buttonType="typeSwitch"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/thin_line"
        android:layout_alignParentBottom="true"
        android:background="?attr/black" />
</RelativeLayout>