<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/lineOpeningTimeText"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/empty"
            android:textAppearance="@style/TextAppearance.Welter.ExtraBigTitleLabel" >

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_line_open_min"
            android:textAppearance="@style/TextAppearance.Welter.BigTitleLabel" />

        <Button
            android:id="@+id/chooseLineOpeningTimeButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/choose"
            android:textAppearance="@style/TextAppearance.Welter.BigTitleLabel" />
    </LinearLayout>

</LinearLayout>