<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal">
        <TextView
    	        android:text="@string/previous_course"
    	        android:id="@+id/textPreviousCourse"
    	        android:layout_width="300dp"
    	        android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:textSize="14pt"
            	android:textStyle="bold"
            	android:gravity="center_vertical|center_horizontal"/>
        <TextView
    	        android:text="@string/make_new_course"
    	        android:id="@+id/textMakeNewCourse"
    	        android:layout_width="300dp"
    	        android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:textSize="14pt"
            	android:textStyle="bold"
            	android:gravity="center_vertical|center_horizontal"/>
        <TextView
    	        android:text="@string/course_design_assets"
    	        android:id="@+id/textCourseAssets"
    	        android:layout_width="400dp"
    	        android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:textSize="14pt"
            	android:textStyle="bold"
            	android:gravity="center_vertical|center_horizontal"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="500dp"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal">    
        	<ListView 
    	        android:id="@+id/listViewPreviousCourse"
    	        android:layout_width="300dp"
    	        android:layout_height="fill_parent"
    	        android:layout_marginRight="20dp"
    	        android:gravity="center_horizontal|center_vertical"/>	    
    	    <ListView 
    	        android:id="@+id/listViewNewCourse"
    	        android:layout_width="300dp"
    	        android:layout_height="fill_parent"
    	        android:layout_marginRight="20dp"
    	        android:gravity="center_horizontal|center_vertical"/>
    	    <GridView 
    	        android:id="@+id/gridViewAssets"
    	        android:layout_width="400dp" 
				android:layout_height="fill_parent"
				android:columnWidth="100dp"
				android:numColumns="auto_fit"
				android:verticalSpacing="10dp"
				android:horizontalSpacing="10dp"
				android:stretchMode="columnWidth"
				android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:paddingTop="20dp"
        android:paddingBottom="10dp">

        <Button
            android:id="@+id/publishCourseDesignButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish"
            android:textAppearance="@style/TextAppearance.Welter.BigTitleLabel"
            android:layout_marginRight="20dp" />
        <Button
            android:id="@+id/unpublishCourseDesignButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unpublish"
            android:textAppearance="@style/TextAppearance.Welter.BigTitleLabel"
            android:layout_marginRight="20dp" />
        
        <Button
            android:id="@+id/takePreviousCourseDesignButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_previous"
            android:textAppearance="@style/TextAppearance.Welter.BigTitleLabel" />
    </LinearLayout>

</LinearLayout>